# Webm-Transcriber

./: .gitignore  README.md  llm_summary.py  pyproject.toml  summarize_transcript_json.py  transcribe_webm.py  transcribe_whisperx.py  video_speaker_fusion.py
docs/: IMPLEMENTATION_SPEC.md
