[project]
name = "minutes-writer"
version = "0.1.0"
description = "Локальная транскрибация .webm встреч через Whisper Large"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mlx-whisper>=0.4.3; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "torch>=2.2.0; platform_system != 'Darwin' or platform_machine != 'arm64'",
  "transformers>=4.39.0; platform_system != 'Darwin' or platform_machine != 'arm64'",
  "accelerate>=0.28.0; platform_system != 'Darwin' or platform_machine != 'arm64'",
  "safetensors>=0.4.2; platform_system != 'Darwin' or platform_machine != 'arm64'",
]

[project.optional-dependencies]
hf = [
  "torch>=2.2.0",
  "transformers>=4.39.0",
  "accelerate>=0.28.0",
  "safetensors>=0.4.2",
]
mlx = [
  "mlx-whisper>=0.4.3",
]
whisperx = [
  "whisperx>=3.8.2",
]
video = [
  "opencv-python-headless>=4.10.0",
  "pytesseract>=0.3.10",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
